--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Sigmar&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -18,7 +19,7 @@
     <div class="main_div">
       <center>
         <br>
-        <button class="btn btn-warning" onclick="startClassification()">START</button>
+        <button class="btn btn-warning" onclick="start()">START</button>
         <h3 id="result_label">I can hear - </h3>
         <h4 class="result_confidence">Accuracy - </h4>
         <br>
