--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <br>
         <button class="btn btn-warning" onclick="start()">START</button>
         <h3 id="result_label">I can hear - </h3>
-        <h4 class="result_confidence">Accuracy - </h4>
+        <h4 id="result_confidence">Accuracy - </h4>
         <br>
         <img src="defult.jpg" id="defult" width="300" height="300">
       </center>
